# cpp-feedback

./: .gitignore  CMakeLists.txt  README.md  odmr_gui.desktop  run_tests_mac.sh
fonts/: roboto.h
macos/: Info.plist
resources/: odmr.icns
src/: gui.cpp  gui.h  main.cpp  measurement.cpp  measurement.h  settings.cpp  settings.h  utils.cpp  utils.h
tests/: test_measurement.cpp  test_settings.cpp  test_utils.cpp
